[gd_scene format=3 uid="uid://x11muvl3x6vi"]

[ext_resource type="Script" uid="uid://d0jw4u3hgsmgd" path="res://UI/main_ui.gd" id="1_qr26y"]
[ext_resource type="PackedScene" uid="uid://do1trasu4al77" path="res://UI/score_ui.tscn" id="2_u7gx0"]
[ext_resource type="PackedScene" uid="uid://cfupml0vgjpdg" path="res://Menus/pause_menu.tscn" id="3_u7gx0"]
[ext_resource type="PackedScene" uid="uid://cicd5yg57nyuh" path="res://Menus/game_over_menu.tscn" id="4_afxui"]

[node name="MainUI" type="CanvasLayer" unique_id=97663169 node_paths=PackedStringArray("score_UI", "_pause_menu", "_game_over_menu")]
script = ExtResource("1_qr26y")
score_UI = NodePath("ScoreUI")
_pause_menu = NodePath("PauseMenu")
_game_over_menu = NodePath("GameOverMenu")

[node name="ScoreUI" parent="." unique_id=1492580529 instance=ExtResource("2_u7gx0")]

[node name="PauseButton" type="TextureButton" parent="." unique_id=1317644554]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0

[node name="PauseMenu" parent="." unique_id=733302398 instance=ExtResource("3_u7gx0")]

[node name="GameOverMenu" parent="." unique_id=1942799696 instance=ExtResource("4_afxui")]
visible = false

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="quit_game" from="PauseMenu" to="." method="_on_pause_menu_quit_game"]
[connection signal="unpaused" from="PauseMenu" to="." method="_on_pause_menu_unpaused"]
